# shaytanmagamax-dab5018f

./: .env.example  .env.staging.example  .gitignore  Makefile  README.md  alembic.ini  bun.lockb  index.html  package.json  pyproject.toml  tailwind.config.ts
apps/: __init__.py
docs/: admin-operations.md  api-contracts.md  architecture.md  assistant-api.md  assistant-architecture.md  assistant-frontend-integration.md  assistant-intents.md  assistant-provider-abstraction.md  audit-trail.md  dashboard.md  data-quality.md  deployment.md  diy-policies.md  domain-model.md  exports.md  frontend-data-layer.md  frontend-integration.md  inbound-sync.md  ingestion.md  local-development.md  mapping.md  observability.md  page-contracts.md  permissions.md  reserve-engine.md  runbooks.md  upload-center.md
scripts/: import_management_report.py
src/: App.tsx  index.css
tests/: assistant_eval_cases.yaml  conftest.py  test_api.py  test_assistant_analytics_catalog.py  test_assistant_analytics_slice.py  test_assistant_eval_suite.py  test_assistant_forecasting.py  test_assistant_insights.py  test_assistant_internal_analytics.py  test_assistant_no_empty_refusals.py  test_assistant_no_more_empty_refusals.py  test_assistant_periods.py  test_assistant_phase5.py  test_assistant_phase6_clarification.py  test_assistant_phase6_hardening.py  test_assistant_phase6_permissions.py  test_assistant_phase6_registry.py  test_assistant_phase6_state.py  test_assistant_streaming.py  test_assortment_import.py  test_auth_profile.py  test_brand_inference.py  test_inbound_google_sheet_sync.py  test_ingestion_phase2.py  test_management_report_import.py  test_management_report_upload_lifecycle.py  test_mapping_service.py  test_phase6_ops.py  (+5 more)
(+274 files in other folders)
